--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,12 @@ pytest = "^7.3.1"
 flake8 = "^6.0.0"
 scipy = "^1.10.1"
 numpy = "^1.24.3"
+pyyaml = "^6.0"
+markdown = "^3.4.3"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.23.1"
 
 [build-system]
 requires = ["poetry-core"]
