--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ scipy = "^1.10.1"
 numpy = "^1.24.3"
 pyyaml = "^6.0"
 markdown = "^3.4.3"
+pylatex = "^1.4.1"
+click = "^8.1.3"
+typeguard = "^4.0.0"
+pydantic = "^1.10.8"
 
 
 [tool.poetry.group.dev.dependencies]
