--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,12 @@ pylatex = "^1.4.1"
 click = "^8.1.3"
 typeguard = "^4.0.0"
 pydantic = "^1.10.8"
+pylint-pydantic = "^0.1.8"
 
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.23.1"
+pylint = "^2.17.4"
 
 [build-system]
 requires = ["poetry-core"]
