--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ click = "^8.1.3"
 typeguard = "^4.0.0"
 pydantic = "^1.10.8"
 pylint-pydantic = "^0.1.8"
+mock = "^5.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
