--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pydantic = "^1.10.8"
 pylint-pydantic = "^0.1.8"
 mock = "^5.0.2"
 pylance = "^0.4.20"
+typer = "^0.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
