--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ pylint-pydantic = "^0.1.8"
 mock = "^5.0.2"
 pylance = "^0.4.20"
 typer = "^0.9.0"
+faker = "^18.10.1"
+mdgen = "^0.1.10"
 
 
 [tool.poetry.group.dev.dependencies]
