--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pylance = "^0.4.20"
 typer = "^0.9.0"
 faker = "^18.10.1"
 mdgen = "^0.1.10"
+pytest-cov = "^4.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
