--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ typer = "^0.9.0"
 faker = "^18.10.1"
 mdgen = "^0.1.10"
 pytest-cov = "^4.1.0"
+rich = "^13.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
