feat: CLI Operational

--- a/Toto_toto_toto.yml
+++ b/Toto_toto_toto.yml
@@ -1,5 +1,4 @@
-creation_date: 2023-07-03 16:59:22.780817
-detail: |
+detail: |-
   sdf,sdf,s:,f:s,d:f;,sd:;f,sd:,f:,sdfsdgfdf:lmkbcvx:,bfvcx
   dsfsdkjfmlsdkfmldsklf
   dsfsdkfhskdhf
