--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ flake8 = "^6.0.0"
 scipy = "^1.10.1"
 numpy = "^1.24.3"
 pyyaml = "^6.0"
-markdown = "^3.4.3"
 pylatex = "^1.4.1"
 click = "^8.1.3"
 typeguard = "^4.0.0"
@@ -25,6 +24,13 @@ faker = "^18.10.1"
 mdgen = "^0.1.10"
 pytest-cov = "^4.1.0"
 rich = "^13.4.2"
+loguru = "^0.7.0"
+tqdm = "^4.65.0"
+mkdocs = "^1.4.3"
+mkdocs-material = "^9.1.18"
+mkdocs-pdf-export-plugin = "^0.5.10"
+weasyprint = "^59.0"
+mdutils = "^1.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
