--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 
-
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
-
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.0"
@@ -20,3 +18,10 @@ pytest = "^7.4.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+]
