--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+loguru = "^0.7.0"
+click = "^8.1.6"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
