--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,17 @@ readme = "README.md"
 python = "^3.11"
 loguru = "^0.7.0"
 click = "^8.1.6"
+pydantic = "^2.2.0"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
+ipykernel = "^6.25.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+coverage = "^7.3.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -26,4 +31,7 @@ minversion = "6.0"
 addopts = "-ra -q"
 testpaths = [
     "tests",
+]
+pythonpath = [
+  "."
 ]
