--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ ipykernel = "^6.25.1"
 pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 coverage = "^7.3.0"
+pytest-mock = "^3.11.1"
 
 [build-system]
 requires = ["poetry-core"]
