--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ loguru = "^0.7.0"
 click = "^8.1.6"
 pydantic = "^2.2.0"
 pyyaml = "^6.0.1"
+rich = "^13.5.2"
+prettytable = "^3.8.0"
+pillow = "^10.0.0"
+numpy = "^1.25.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
