--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ rich = "^13.5.2"
 prettytable = "^3.8.0"
 pillow = "^10.0.0"
 numpy = "^1.25.2"
+pandas = "^2.0.3"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
